EEVEE: Crash with normal map #120065

Closed
opened 2024-03-29 15:57:20 +01:00 by Clément Foucault · 3 comments

Opening test file glossy_normal_map.blend and switching the viewport to EEVEE (or EEVEE-Next) crashes blender in debug build.

It must be caused by a recent refactor but I don't have time to bisect.

Read blend: "/mnt/data/Blender/blender/tests/data/render/shader/glossy_normal_map.blend"
/mnt/data/Blender/build_linux/bin/blender() [0x540e4d6]
/mnt/data/Blender/build_linux/bin/blender() [0x518b80c]
/mnt/data/Blender/build_linux/bin/blender() [0x4524ad8]
/mnt/data/Blender/build_linux/bin/blender() [0x48b1201]
/mnt/data/Blender/build_linux/bin/blender() [0x596613d]
/mnt/data/Blender/build_linux/bin/blender() [0x59663d8]
/mnt/data/Blender/build_linux/bin/blender() [0x5966e30]
/mnt/data/Blender/build_linux/bin/blender() [0x59038fd]
/mnt/data/Blender/build_linux/bin/blender() [0x541031b]
/mnt/data/Blender/build_linux/bin/blender() [0x5410031]
/mnt/data/Blender/build_linux/bin/blender() [0x5412c0c]
/mnt/data/Blender/build_linux/bin/blender() [0x5413273]
/mnt/data/Blender/build_linux/bin/blender() [0x5413c38]
/mnt/data/Blender/build_linux/bin/lib/libtbb.so.2(+0x29b45) [0x7fa0a32adb45]
/mnt/data/Blender/build_linux/bin/lib/libtbb.so.2(+0x29e78) [0x7fa0a32ade78]
/mnt/data/Blender/build_linux/bin/blender() [0x540edcf]
/mnt/data/Blender/build_linux/bin/blender() [0x540f0df]
/mnt/data/Blender/build_linux/bin/blender() [0x5412c82]
/mnt/data/Blender/build_linux/bin/lib/libtbb.so.2(_ZNK3tbb10interface78internal15task_arena_base16internal_executeERNS1_13delegate_baseE+0x135) [0x7fa0a3297ca5]
/mnt/data/Blender/build_linux/bin/blender() [0x5410e1c]
/mnt/data/Blender/build_linux/bin/blender() [0x54104cd]
/mnt/data/Blender/build_linux/bin/blender() [0x540f2e1]
/mnt/data/Blender/build_linux/bin/blender() [0x540e96d]
/mnt/data/Blender/build_linux/bin/blender() [0x5986f35]
/mnt/data/Blender/build_linux/bin/blender() [0x5902a4a]
/mnt/data/Blender/build_linux/bin/blender() [0x59c1636]
/mnt/data/Blender/build_linux/bin/blender() [0x59c3085]
/mnt/data/Blender/build_linux/bin/blender() [0x59c2aca]
/mnt/data/Blender/build_linux/bin/blender() [0x761b9ad]
/mnt/data/Blender/build_linux/bin/blender() [0x761baed]
/mnt/data/Blender/build_linux/bin/blender() [0x61d461f]
/mnt/data/Blender/build_linux/bin/blender() [0x54cd8ec]
/mnt/data/Blender/build_linux/bin/blender() [0x54cdf89]
/mnt/data/Blender/build_linux/bin/blender() [0x54ced36]
/mnt/data/Blender/build_linux/bin/blender() [0x54c636a]
/mnt/data/Blender/build_linux/bin/blender() [0x42577a0]
/usr/lib/libc.so.6(+0x29cd0) [0x7fa0920aacd0]
/usr/lib/libc.so.6(__libc_start_main+0x8a) [0x7fa0920aad8a]
/mnt/data/Blender/build_linux/bin/blender() [0x42570a5]
BLI_assert failed: source/blender/blenkernel/intern/customdata.cc:2977, CustomData_set_layer_active_index(), at 'uint(layer_index) < uint(layer_num)'

Opening test file `glossy_normal_map.blend` and switching the viewport to EEVEE (or EEVEE-Next) crashes blender in debug build. It must be caused by a recent refactor but I don't have time to bisect. ``` Read blend: "/mnt/data/Blender/blender/tests/data/render/shader/glossy_normal_map.blend" /mnt/data/Blender/build_linux/bin/blender() [0x540e4d6] /mnt/data/Blender/build_linux/bin/blender() [0x518b80c] /mnt/data/Blender/build_linux/bin/blender() [0x4524ad8] /mnt/data/Blender/build_linux/bin/blender() [0x48b1201] /mnt/data/Blender/build_linux/bin/blender() [0x596613d] /mnt/data/Blender/build_linux/bin/blender() [0x59663d8] /mnt/data/Blender/build_linux/bin/blender() [0x5966e30] /mnt/data/Blender/build_linux/bin/blender() [0x59038fd] /mnt/data/Blender/build_linux/bin/blender() [0x541031b] /mnt/data/Blender/build_linux/bin/blender() [0x5410031] /mnt/data/Blender/build_linux/bin/blender() [0x5412c0c] /mnt/data/Blender/build_linux/bin/blender() [0x5413273] /mnt/data/Blender/build_linux/bin/blender() [0x5413c38] /mnt/data/Blender/build_linux/bin/lib/libtbb.so.2(+0x29b45) [0x7fa0a32adb45] /mnt/data/Blender/build_linux/bin/lib/libtbb.so.2(+0x29e78) [0x7fa0a32ade78] /mnt/data/Blender/build_linux/bin/blender() [0x540edcf] /mnt/data/Blender/build_linux/bin/blender() [0x540f0df] /mnt/data/Blender/build_linux/bin/blender() [0x5412c82] /mnt/data/Blender/build_linux/bin/lib/libtbb.so.2(_ZNK3tbb10interface78internal15task_arena_base16internal_executeERNS1_13delegate_baseE+0x135) [0x7fa0a3297ca5] /mnt/data/Blender/build_linux/bin/blender() [0x5410e1c] /mnt/data/Blender/build_linux/bin/blender() [0x54104cd] /mnt/data/Blender/build_linux/bin/blender() [0x540f2e1] /mnt/data/Blender/build_linux/bin/blender() [0x540e96d] /mnt/data/Blender/build_linux/bin/blender() [0x5986f35] /mnt/data/Blender/build_linux/bin/blender() [0x5902a4a] /mnt/data/Blender/build_linux/bin/blender() [0x59c1636] /mnt/data/Blender/build_linux/bin/blender() [0x59c3085] /mnt/data/Blender/build_linux/bin/blender() [0x59c2aca] /mnt/data/Blender/build_linux/bin/blender() [0x761b9ad] /mnt/data/Blender/build_linux/bin/blender() [0x761baed] /mnt/data/Blender/build_linux/bin/blender() [0x61d461f] /mnt/data/Blender/build_linux/bin/blender() [0x54cd8ec] /mnt/data/Blender/build_linux/bin/blender() [0x54cdf89] /mnt/data/Blender/build_linux/bin/blender() [0x54ced36] /mnt/data/Blender/build_linux/bin/blender() [0x54c636a] /mnt/data/Blender/build_linux/bin/blender() [0x42577a0] /usr/lib/libc.so.6(+0x29cd0) [0x7fa0920aacd0] /usr/lib/libc.so.6(__libc_start_main+0x8a) [0x7fa0920aad8a] /mnt/data/Blender/build_linux/bin/blender() [0x42570a5] BLI_assert failed: source/blender/blenkernel/intern/customdata.cc:2977, CustomData_set_layer_active_index(), at 'uint(layer_index) < uint(layer_num)'
Clément Foucault added the
Interest
EEVEE
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-29 15:57:21 +01:00
Clément Foucault changed title from EEVEE to EEVEE: Crash with normal map 2024-03-29 15:58:04 +01:00
Member

Crashed in BKE_mesh_calc_loop_tangent_ex where the tan_index==-1 and it hit the asset in CustomData_set_layer_active_index.

Crashed in `BKE_mesh_calc_loop_tangent_ex` where the `tan_index==-1` and it hit the asset in `CustomData_set_layer_active_index`.
Member

Hi @fclem , where is glossy_normal_map.blend file btw? 👀

Edit: Yiming helped me, thanks :)

Hi @fclem , where is `glossy_normal_map.blend` file btw? 👀 Edit: Yiming helped me, thanks :)
Member

Can confirm in debug build. Hard to figure out responsible commit since crash is not happening in release build (can't identify closed good/bad commits to bisect)

Can confirm in debug build. Hard to figure out responsible commit since crash is not happening in release build (can't identify closed good/bad commits to bisect)
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-04-01 16:49:23 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-01 16:49:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120065
No description provided.