Fix #120065: Mesh tangent draw extraction crash

Since the code was added, it used the active indices of the input and
output custom data layers incorrectly. 82b88f130a55e433192f exposed that
by actually modifying the active indices of the ouput custom data
correctly, but it didn't update a couple other places to take that into
account.